Now no longer overflows x when overflowing y

--- a/site/src/app.scss
+++ b/site/src/app.scss
@@ -35,7 +35,7 @@ body.theme-dark {
     box-sizing: border-box;
 }
 .create-wrapper {
-    width: 100vw;
+    width: 100%;
     position: relative;
     resize: vertical;
 
